--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,11 +1,14 @@
+# ==== CI-friendly Gradle/JVM ====
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
-org.gradle.daemon=false
 org.gradle.workers.max=2
-org.gradle.caching=true
-
+org.gradle.daemon=false
+org.gradle.vfs.watch=false
+# Reduce transform churn on GitHub runners
+android.enableDexingArtifactTransform=false
+# Flutter/AndroidX
 android.useAndroidX=true
 android.enableJetifier=false
-
-# Kotlin: avoid flaky external daemon
-kotlin.compiler.execution.strategy=in-process
-kotlin.daemon.enabled=false
+# Keep native debug symbols to avoid strip failures (AGP 8+)
+android.packagingOptions.keepDebugSymbols=true
+# Be explicit on Java toolchain used by AGP plugins
+kotlin.daemon.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=384m
