--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -1,4 +1,4 @@
-name: Android Play Bundle
+name: Android Play Bundle (quick)
 
 on:
   workflow_dispatch:
@@ -22,6 +22,10 @@ jobs:
       ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
       ANDROID_HOME: ${{ github.workspace }}/android-sdk
       JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
+      # These must exist in repo Settings > Secrets and variables > Actions (Repository secrets)
+      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
     steps:
       - name: Checkout
@@ -36,8 +40,7 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      # Install cmdline-tools and expose sdkmanager on PATH
-      - name: Install Android commandline-tools
+      - name: Install Android cmdline-tools
         run: |
           set -eux
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
@@ -45,13 +48,14 @@ jobs:
           curl -sSL -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip
           unzip -q tools.zip -d latest
           rm -f tools.zip
+          # Make sdkmanager available
           echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/cmdline-tools/bin" >> "$GITHUB_PATH"
 
       - name: Accept SDK licenses (non-interactive)
         run: |
           set +e
           yes y | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses >/dev/null
-          echo "sdkmanager --licenses exit code: $?"
+          echo "licenses exit code: $?"
           set -e
 
       - name: Install required SDK packages
@@ -66,13 +70,28 @@ jobs:
             "ndk;27.0.12077973"
           echo "$ANDROID_SDK_ROOT/platform-tools" >> "$GITHUB_PATH"
 
+      - name: Write local.properties (point Flutter/Gradle to this SDK)
+        run: |
+          set -eux
+          printf "sdk.dir=%s\nflutter.sdk=%s\n" "$ANDROID_SDK_ROOT" "$FLUTTER_HOME" > android/local.properties || true
+          echo "android/local.properties:"
+          cat android/local.properties || true
+
       - name: Decode keystore from secrets
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
           set -eux
+          test -n "$KEYSTORE_BASE64"
+          # Path must match what your app/build.gradle expects (android/app/release-keystore.jks)
           echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
           ls -l android/app/release-keystore.jks
+
+      - name: Ensure Gradle wrapper exists
+        run: |
+          set -eux
+          test -x android/gradlew || { echo "ERROR: android/gradlew missing or not executable"; exit 1; }
+          ls -l android/gradlew android/gradle/wrapper/gradle-wrapper.jar
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -87,50 +106,23 @@ jobs:
       - name: flutter pub get
         run: flutter pub get
 
-      # Show repo layout (debug: proves where gradlew lives)
-      - name: Show repo layout
+      - name: Clean Gradle & Flutter caches (light)
         run: |
           set -eux
-          pwd
-          ls -la
-          ls -la android || true
-          ls -la android/app || true
-
-      # Clean caches & stop daemons
-      - name: Clean Gradle/Flutter caches
-        run: |
-          set -eux
-          # Ensure wrapper is executable even if git lost the bit
-          chmod +x android/gradlew || true
-          (cd android && ./gradlew --stop) || true
+          ./android/gradlew --stop || true
           rm -rf $HOME/.gradle/caches $HOME/.gradle/daemon $HOME/.gradle/kotlin || true
           rm -rf android/.gradle || true
           flutter clean
 
-      # Build with Gradle directly from /android
-      - name: Build AAB (Gradle, release)
-        working-directory: android
-        env:
-          ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
-          ANDROID_HOME: ${{ github.workspace }}/android-sdk
-          _JAVA_OPTIONS: "-Xmx2g -XX:MaxMetaspaceSize=512m"
-          JAVA_TOOL_OPTIONS: "-Xmx2g -XX:MaxMetaspaceSize=512m"
-          GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2g -XX:MaxMetaspaceSize=512m" -Dorg.gradle.vfs.watch=false -Dorg.gradle.parallel=false'
+      - name: Build AAB (release)
         run: |
           set -eux
-          # Sanity: wrapper present & executable
-          ls -l gradlew
-          # Make sure gradle.properties is conservative
-          echo "----- gradle.properties -----"
-          cat ../android/gradle.properties || true
-          echo "-----------------------------"
-
-          # This invokes the Flutter Gradle plugin and produces the AAB
-          ./gradlew :app:bundleRelease --no-daemon --stacktrace --info
+          # Keep shrinkers off while stabilising CI; packaging keeps debug symbols
+          flutter build appbundle --release --no-shrink --no-tree-shake-icons --verbose
 
       - name: Upload bundle artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-release-aab
-          path: android/app/build/outputs/bundle/release/app-release.aab
+          path: build/app/outputs/bundle/release/app-release.aab
           if-no-files-found: error
