--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -1,4 +1,4 @@
-name: Android Play Bundle (quick)
+name: Android Play Bundle
 
 on:
   workflow_dispatch:
@@ -10,6 +10,7 @@ on:
       - "pubspec.yaml"
       - ".github/workflows/android-aab.yml"
 
+# IMPORTANT: run everything from repo root (no global working-directory)
 defaults:
   run:
     shell: bash
@@ -22,15 +23,26 @@ jobs:
       ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
       ANDROID_HOME: ${{ github.workspace }}/android-sdk
       JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
-      KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-      KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-      KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Debug: where are we?
+        run: |
+          set -eux
+          pwd
+          ls -la
+          ls -la android || true
+          ls -la android/gradle/wrapper || true
+
+      - name: Ensure Gradle wrapper exists (from repo root)
+        run: |
+          set -eux
+          test -x android/gradlew || (echo "ERROR: android/gradlew missing or not executable" && exit 1)
+          chmod +x android/gradlew
 
       - name: Set up Java 17
         uses: actions/setup-java@v4
@@ -39,7 +51,8 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      - name: Install Android cmdline-tools
+      # Install SDK cmdline-tools and expose sdkmanager on PATH
+      - name: Install Android commandline-tools
         run: |
           set -eux
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
@@ -53,7 +66,7 @@ jobs:
         run: |
           set +e
           yes y | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses >/dev/null
-          echo "licenses exit code: $?"
+          echo "sdkmanager --licenses exit code: $?"
           set -e
 
       - name: Install required SDK packages
@@ -73,15 +86,8 @@ jobs:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
           set -eux
-          test -n "$KEYSTORE_BASE64"
           echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
           ls -l android/app/release-keystore.jks
-
-      - name: Ensure Gradle wrapper exists
-        run: |
-          set -eux
-          test -x android/gradlew || { echo "ERROR: android/gradlew missing or not executable"; exit 1; }
-          ls -l android/gradlew android/gradle/wrapper/gradle-wrapper.jar
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -90,21 +96,13 @@ jobs:
           channel: "stable"
           cache: true
 
-      - name: Write local.properties (after Flutter is on PATH)
-        run: |
-          set -eux
-          FLUTTER_SDK_DIR="$(dirname "$(dirname "$(which flutter)")")"
-          printf "sdk.dir=%s\nflutter.sdk=%s\n" "$ANDROID_SDK_ROOT" "$FLUTTER_SDK_DIR" > android/local.properties
-          echo "android/local.properties:"
-          cat android/local.properties
-
-      - name: Doctor (sanity check)
+      - name: flutter doctor (sanity check)
         run: flutter doctor -v
 
       - name: flutter pub get
         run: flutter pub get
 
-      - name: Clean Gradle & Flutter caches (light)
+      - name: Clean Gradle/Flutter caches
         run: |
           set -eux
           ./android/gradlew --stop || true
@@ -112,6 +110,7 @@ jobs:
           rm -rf android/.gradle || true
           flutter clean
 
+      # Build the AAB via Flutter (resolves Gradle via the wrapper)
       - name: Build AAB (release)
         run: |
           set -eux
