--- a/.github/workflows/android-aab.yml
+++ b/.github/workflows/android-aab.yml
@@ -43,7 +43,6 @@ jobs:
           java-version: "17"
           cache: gradle
 
-      # Minimal SDK bootstrap
       - name: Install Android commandline-tools
         run: |
           set -eux
@@ -78,21 +77,32 @@ jobs:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
           set -eux
-          test -n "$KEYSTORE_BASE64"
           echo "$KEYSTORE_BASE64" | base64 -d > android/app/release-keystore.jks
           ls -l android/app/release-keystore.jks
 
-      - name: Write local.properties
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.32.8"
+          channel: stable
+          cache: true
+
+      - name: Write local.properties (sdk.dir + flutter.sdk)
         run: |
           set -eux
-          printf "sdk.dir=%s\n" "$ANDROID_SDK_ROOT" > android/local.properties
+          # Discover flutter SDK path from the flutter binary on PATH
+          FLUTTER_BIN="$(command -v flutter)"
+          FLUTTER_SDK="$(dirname "$(dirname "$FLUTTER_BIN")")"
+          {
+            printf "sdk.dir=%s\n" "$ANDROID_SDK_ROOT"
+            printf "flutter.sdk=%s\n" "$FLUTTER_SDK"
+          } > android/local.properties
+          echo "local.properties:"
           cat android/local.properties
 
       - name: Gradle versions (sanity)
         working-directory: android
-        run: |
-          set -eux
-          ./gradlew --version
+        run: ./gradlew --version
 
       - name: Clean Gradle caches (light)
         working-directory: android
@@ -121,13 +131,6 @@ jobs:
           if-no-files-found: warn
 
       # ------------ ALSO TRY VIA FLUTTER (SECONDARY) ------------
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.32.8"
-          channel: stable
-          cache: true
-
       - name: flutter doctor
         run: flutter doctor -v || true
 
