Gradle: drop android.enableDexingArtifactTransform; useFullClasspathForDexingTransform=true

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,14 +1,15 @@
-# ==== CI-friendly Gradle/JVM ====
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
-org.gradle.workers.max=2
+org.gradle.jvmargs=-Xmx1536m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 org.gradle.daemon=false
-org.gradle.vfs.watch=false
-# Reduce transform churn on GitHub runners
-android.enableDexingArtifactTransform=false
-# Flutter/AndroidX
+org.gradle.parallel=false
+org.gradle.workers.max=1
+
 android.useAndroidX=true
 android.enableJetifier=false
-# Keep native debug symbols to avoid strip failures (AGP 8+)
-android.packagingOptions.keepDebugSymbols=true
-# Be explicit on Java toolchain used by AGP plugins
+
+# Replace the removed flag with the supported one:
+android.useFullClasspathForDexingTransform=true
+
+# (Optional) quiets warnings about removed options in 8.3+
+android.suppressUnsupportedOptionWarnings=android.enableDexingArtifactTransform
+
 kotlin.daemon.jvmargs=-Xmx512m -XX:MaxMetaspaceSize=384m
