--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,10 @@ name: playlist_city
 description: A Flutter app for creating and saving music playlists
 publish_to: 'none'
 
+version: 1.0.1+2
+
 environment:
-  sdk: ">=2.18.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
