--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: playlist_city
 description: A Flutter app for creating and saving music playlists
 publish_to: 'none'
 
-version: 1.0.1+2
+version: 1.0.1+4
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -21,6 +21,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   package_info_plus: ^9.0.0
   url_launcher: ^6.3.2
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
