--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   package_info_plus: ^9.0.0
   url_launcher: ^6.3.2
-  provider: ^6.1.5+1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
