--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,4 @@
-// android/app/build.gradle  (Groovy, not KTS)
+// android/app/build.gradle  (Groovy)
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -11,10 +11,8 @@ def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
     localPropertiesFile.withInputStream { stream -> localProperties.load(stream) }
 }
-def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-if (flutterVersionCode == null) flutterVersionCode = '1'
-def flutterVersionName = localProperties.getProperty('flutter.versionName')
-if (flutterVersionName == null) flutterVersionName = '1.0'
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode') ?: '1'
+def flutterVersionName = localProperties.getProperty('flutter.versionName') ?: '1.0'
 
 android {
     namespace "com.playlistcity.app"
@@ -24,71 +22,59 @@ android {
         applicationId "com.playlistcity.app"
         minSdk 21
         targetSdk flutter.targetSdkVersion
-
-        // ✅ Automatically pulled from pubspec.yaml
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     signingConfigs {
         release {
-            def keystoreProperties = new Properties()
-            def keystoreFile = rootProject.file("android/key.properties")
-            if (keystoreFile.exists()) {
-                keystoreProperties.load(new FileInputStream(keystoreFile))
-                storeFile file(keystoreProperties["storeFile"])
-                storePassword keystoreProperties["storePassword"]
-                keyAlias keystoreProperties["keyAlias"]
-                keyPassword keystoreProperties["keyPassword"]
-            } else {
-                println("⚠️ Warning: android/key.properties not found, skipping local signing")
+            // CI writes android/key.properties and android/app/upload-keystore.jks
+            def props = new Properties()
+            def propsFile = rootProject.file("android/key.properties")
+            if (!propsFile.exists()) {
+                throw new GradleException("android/key.properties not found — signing is required for release.")
             }
+            props.load(new FileInputStream(propsFile))
+
+            def storeFileName = (props["storeFile"] ?: "upload-keystore.jks").toString()
+            def storePath = file(storeFileName) // resolved relative to android/app
+            if (!storePath.exists()) {
+                throw new GradleException("Keystore file not found at: " + storePath.absolutePath)
+            }
+
+            storeFile storePath
+            storePassword props["storePassword"]
+            keyAlias props["keyAlias"]
+            keyPassword props["keyPassword"]
         }
     }
 
     buildTypes {
         release {
-            if (signingConfigs.release.storeFile != null) {
-                signingConfig signingConfigs.release
-            }
+            // ✅ Always apply signing (fail if misconfigured)
+            signingConfig signingConfigs.release
+            v1SigningEnabled true
+            v2SigningEnabled true
 
-            // Disable shrinking/obfuscation for CI simplicity
+            // Keep CI simple; don’t strip symbols
             minifyEnabled false
             shrinkResources false
-
-            // Keep native debug symbols (avoid “failed to strip”)
-            ndk {
-                debugSymbolLevel 'FULL'
-            }
-
-            // Skip symbol stripping (safe for Play uploads)
-            packagingOptions {
-                doNotStrip "**/*.so"
-            }
+            ndk { debugSymbolLevel 'FULL' }
+            packagingOptions { doNotStrip "**/*.so" }
         }
-
-        debug {
-            debuggable true
-        }
+        debug { debuggable true }
     }
 
-    // Toolchains
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    kotlinOptions {
-        jvmTarget = '11'
-    }
+    kotlinOptions { jvmTarget = '11' }
 
-    // Avoid META-INF clashes and keep .so symbols
     packagingOptions {
-        jniLibs {
-            keepDebugSymbols.add("**/*.so")
-        }
-        resources {
-            excludes += ['META-INF/AL2.0', 'META-INF/LGPL2.1']
-        }
+        jniLibs { keepDebugSymbols.add("**/*.so") }
+        resources { excludes += ['META-INF/AL2.0', 'META-INF/LGPL2.1'] }
     }
 }
 
